# pluginperf

./: .env.example  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  QUICKSTART.md  README.md  backlog.md  baseline.csv  capitol_chambers_perf.csv  comparison.csv  package.sh  plugindoctor_CapChamber.md  preset_validation_report.txt  realtime_test.csv  test_results.csv  true_baseline.csv  validation_test.csv  validation_test2.csv
.github/: CODEOWNERS
docs/: BATCH_TESTING.md  PARAMETER_QUICK_REFERENCE.md  PLUGIN_PARAMETERS.md  REALTIME_THREAD_RESEARCH.md
plugin_results/: summary.json  summary.txt
src/: argparse.hpp  benchmark_thread.hpp  csv.hpp  main.cpp  plugin_params.hpp  plugin_presets.hpp  plugparams.cpp  storybored_presets.hpp  sysinfo.cpp  system_info.hpp
synthetic_plugin/: CMakeLists.txt  README.md
synthetic_plugin/Source/: PluginProcessor.cpp  PluginProcessor.h
tools/: run_measure.py  test_all_plugins.py  test_preset_folder.py  validate_presets.py  visualize.py
